<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Code Scanner. An android app to scan and create codes(barcodes, QR codes, etc)
  ~ Copyright (C) 2022 czlucius
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published
  ~ by the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  --><resources>
    <string name="app_name">Code Scanner</string>
    <string name="simple_description">Scan and create codes</string>
    <string name="source_code">Open Source</string>
    <string name="open_source_view_or_contribute">Contribute on GitHub. AGPLv3+.</string>
    <string name="oss_link" translatable="false">https://github.com/czlucius/code-scanner/</string>
    <string name="privacy_policy_url" translatable="false">https://github.com/czlucius/code-scanner/blob/main/privacy_policy.md</string>
    <string name="description_permission">Allow scanning codes (barcodes, QR codes, etc.) with the camera.</string>
    <string name="intent1_name">Scan code</string>
    <string name="intent2_name">Create code from data</string>
    <string name="scan">Scan</string>
    <string name="history">History</string>
    <string name="create">Create</string>
    <string name="unknown">Unknown</string>
    <string name="add_contact">Add Contact</string>
    <string name="copy">Copy</string>
    <string name="send_email">Send e-mail</string>
    <string name="open_url">Open URL</string>
    <string name="home">Home</string>
    <string name="mobile">Mobile</string>
    <string name="fax">Fax</string>
    <string name="work">Work</string>
    <string name="data_invalid">Invalid data.</string>
    <string name="no_email_providers">Could not find any e-mail providers</string>
    <string name="no_browsers">Could not find any web browsers</string>
    <string name="img_not_found">Could not find the image</string>
    <string name="error">Error!</string>
    <string name="no_cam">Could not find any cameras</string>
    <string name="no_cam_msg">The device does not have a camera, so no codes can be scanned.\nTry using an external camera to add this functionality to your device.</string>
    <string name="no_model">The QR/barcode reading model is not available.\nCheck/Upgrade your MicroG or Google Play Services and try again.</string>
    <string name="cam_unavailable">The camera is unavailable at the moment</string>
    <string name="title">Job Title</string>
    <string name="name">Name</string>
    <string name="phones">Phones</string>
    <string name="org">Organization</string>
    <string name="emails">Emails</string>
    <string name="addresses">Addresses</string>
    <string name="websites">Websites</string>
    <string name="email">E-mail</string>
    <string name="contact">Contact</string>
    <string name="url">URL</string>
    <string name="text">Text</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="contents">Contents</string>
    <string name="qr">QR Code</string>
    <string name="cam_pm">Camera permission</string>
    <string name="grant_pm_rationale">Please grant camera permission to scan QR and barcodes.</string>
    <string name="pm_denial">Camera permission denied.</string>
    <string name="pm_denial_permanant">Camera permission denied permanently. Correct this in the system settings.</string>
    <string name="position_code">Position the code in the square</string>
    <string name="codes_scanned">%1$d codes scanned</string>
    <string name="date_icon">Date icon</string>
    <string name="data_type_code">Data type of the scanned code</string>
    <string name="format_code">Format of the scanned code</string>
    <string name="qr_color">Colour</string>
    <string name="background_color">Background colour</string>
    <string name="scan_from_image">Scan from image</string>
    <string name="flash">Flash</string>
    <string name="edit_contents">Edit Content</string>
    <string name="enter_contents_here">Enter contents…</string>
    <string name="enter_url_here">Enter URL…</string>
    <string name="generated_qr_image">Generated QR Image</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="clear_all">Clear all</string>
    <string name="image_saved">Image saved</string>
    <string name="no_codes_detected">No codes detected.</string>
    <string name="grant">Grant</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="connect_wifi">Connect</string>
    <string name="connection_error_simple">Can\'t connect to the network.</string>
    <string name="connection_internal_error">Can\'t connect due to an internal error!</string>
    <string name="connection_app_disallowed">Grant this app permission to add Wi-Fi networks in the system settings.</string>
    <string name="connection_duplicate">Can\'t connect because a duplicate network was found.</string>
    <string name="connection_app_exceed_limit">The app has exceeded the maximum Wi-Fi suggestion limit. Re-install it to reset the limit.</string>
    <string name="connection_ntwk_invalid">Can\'t connect to an invalid network.</string>
    <string name="connection_ntwk_disallowed">Can\'t connect since this network is not allowed.</string>
    <string name="ssid">Wi-Fi network name</string>
    <string name="password">Wi-Fi Password</string>
    <string name="copy_ssid">Copy Wi-Fi network name</string>
    <string name="copy_password">Copy password</string>
    <string name="wifi">Wi-Fi</string>
    <string name="encryption_type">Encryption type</string>
    <string name="open_network">Open</string>
    <string name="wifi_password_hint">Password (leave blank if open)</string>
    <string name="wifi_ssid_hint">Network name/SSID</string>
    <string name="wifi_enctype_hint">Encryption type:</string>
    <string name="wep">WEP</string>
    <string name="wpa">WPA</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="prefix">Prefix</string>
    <string name="suffix">Suffix</string>
    <string name="company">Company</string>
    <string name="job">Job</string>
    <string name="phone_number">Phone number</string>
    <string name="street">Street</string>
    <string name="zip_code">ZIP code</string>
    <string name="region">Region</string>
    <string name="country">Country</string>
    <string name="additional_notes">Additional notes</string>
    <string name="sms">SMS</string>
    <string name="sms_recipients_phone_number">Phone number of recipient</string>
    <string name="start_sms">Send message</string>
    <string name="no_msg_app_found">Install a messaging app first.</string>
    <string name="copy_sms_recipient">Copy recipient</string>
    <string name="recipient">Recipient</string>
    <string name="copy_sms_contents">Copy SMS content</string>
    <string name="batch_scan">Batch scan</string>
    <string name="toggle_dialogs">Toggle dialogs shown after scanning. Codes will be saved to history.</string>
    <string name="about">About</string>
    <string name="support">Support</string>
    <string name="preferences">Preferences</string>
    <string name="call_number">Call number</string>
    <string name="copy_phone_number">Copy phone number</string>
    <string name="geo_template">Latitude: %1$f\nLongitude: %2$f</string>
    <string name="view_location">View location in a map app</string>
    <string name="geolocation">Geolocation</string>
    <string name="onboarding_welcome">Welcome</string>
    <string name="onboarding_welcome_summary">Thank you for using Code Scanner.\nClick next to learn more about the app and its features.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="intro">Introduction</string>
    <string name="privacy_policy_description">Please read the privacy policy below to learn how your data is handled. Thanks.</string>
    <string name="click_privacy_policy">View privacy policy</string>
    <string name="contact_email" translatable="false">czl.apps@icloud.com</string>
    <string name="share_with_others">Share this app with others.</string>
    <string name="promo_share_description">Code Scanner — Scan and create QR and barcodes.\n%1$s</string>
    <string name="store_url">https://github.com/czlucius/code-scanner</string>
    <string name="next">Next</string>
    <string name="onboarding_scan_summary">Scan and create codes everywhere.</string>
    <string name="onboarding_history_summary">View history of previously scanned codes.</string>
    <string name="onboarding_create_summary">Create QR codes and apply colours.</string>
    <string name="onboarding_batch_summary">Scan all the codes you want, and find them in the history tab.</string>
    <string name="wifi_control_error">You have to enable wifi control permission manually as you have denied it previously\n\nGo to (<b><i>Settings > Apps and notifications > Special App access > Wi-Fi Control > Code Scanner</i></b>)\n\nthen enable (<b><i>Allow app to control Wi-Fi</i></b>)\n\n\nIf you wish to add a wifi network manually, you can also do that</string>
    <string name="open_settings">Open Settings</string>
    <string name="add_manually">Add Manually</string>
</resources>