<!--
  ~ Code Scanner. An android app to scan and create codes(barcodes, QR codes, etc)
  ~ Copyright (C) 2022 czlucius
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published
  ~ by the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>
        <SwitchPreference
            app:key="batch_scan"
            app:title="@string/batch_scan"
            app:summary="@string/toggle_dialogs"
            app:icon="@drawable/ic_round_scanner_24"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/support">


        <Preference
            app:key="share_app"
            app:title="@string/share"
            app:defaultValue="@string/promo_share_description"
            app:summary="@string/share_with_others"
            app:icon="@drawable/ic_round_share_24"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about">

        <Preference
            app:key="about_app"
            app:summary="@string/simple_description"
            app:title="@string/app_name" />

        <Preference
            app:icon="@drawable/ic_baseline_copyright_24"
            app:key="oss_licenses"
            app:title="@string/open_source_licenses"/>

        <Preference
            app:icon="@drawable/ic_baseline_police_24"
            app:key="privacy_policy"
            app:title="@string/privacy_policy"/>


        <!-- TODO: PLAY: state image source and file request with Google Play team so that app does not get accused for intellectual property violations. -->
        <Preference
            app:icon="@drawable/ic_baseline_code_24"
            app:key="open_source"
            app:summary="@string/open_source_view_or_contribute"
            app:title="@string/source_code" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Advertising">
        <Preference
            android:layout="@layout/warning_pref"
            app:icon="@drawable/ic_advertisement_fill"
            app:key="watch_ads_prefbtn"
            app:summary="@string/watch_ads_description"
            app:title="[ADS] Watch ad video to remove banner ads" />
    </PreferenceCategory>

</PreferenceScreen>