<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Code Scanner. An android app to scan and create codes(barcodes, QR codes, etc)
  ~ Copyright (C) 2021 Lucius Chee Zihan
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published
  ~ by the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <HorizontalScrollView
        android:id="@+id/toggleRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="center">


        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/typeToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:theme="@style/ThemeOverlay.App.ToggleButtonGroupStyle"
            app:checkedButton="@id/createText"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/createText"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text" />

            <Button
                android:id="@+id/createUrl"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url" />

            <Button
                android:id="@+id/createWifi"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi" />

            <Button
                android:id="@+id/createContact"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact" />

            <Button
                android:id="@+id/createSms"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms" />



        </com.google.android.material.button.MaterialButtonToggleGroup>
    </HorizontalScrollView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ViewFlipper
            android:id="@+id/viewFlipper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:measureAllChildren="false"
            android:padding="16dp">


            <EditText
                android:id="@+id/textFieldCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/enter_contents_here"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/urlFieldCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="http://"
                android:hint="@string/enter_url_here"
                android:inputType="textUri" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/wifiFieldCreate"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/enterWifiSsidCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/wifi_ssid_hint"
                    android:inputType="text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/enterWifiPwCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/wifi_password_hint"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/enterWifiSsidCreate"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/wifi_enctype_hint"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/enterWifiPwCreate"
                    app:layout_constraintVertical_bias="0.0" />


                <Spinner
                    android:id="@+id/enterWifiEncModeCreate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/materialTextView"
                    app:layout_constraintTop_toBottomOf="@+id/enterWifiPwCreate"
                    app:layout_constraintVertical_bias="0.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <include
                android:id="@+id/contactFieldCreate"
                layout="@layout/contact_fields" />

            <LinearLayout
                android:id="@+id/smsFieldCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/enterRecipientSmsCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="http://"
                    android:hint="@string/sms_recipients_phone_number"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/enterContentsSmsCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="http://"
                    android:hint="@string/contents"
                    android:inputType="textMultiLine" />


            </LinearLayout>


        </ViewFlipper>
    </ScrollView>


</LinearLayout>
