<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Code Scanner. An android app to scan and create codes(barcodes, QR codes, etc)
  ~ Copyright (C) 2020 Lucius Chee Zihan
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published
  ~ by the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/scannerFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_crop_free_24"
        android:title="@string/scan"/>

    <item
        android:id="@+id/historyFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/history"/>

    <item
        android:id="@+id/createFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/create" />


    
</menu>